shorten path var to path

--- a/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
@@ -13,138 +13,138 @@ description: "Snapshots of a STEM Student: My summer in LA in 2022"
 author: kjros 
 playlist: 56hgBMlG34OwDsbwDReXTd?si=126a3ece5e264df9
 images: 
-- image_path: sunny-blue-omusubi.jpg
+- path: sunny-blue-omusubi.jpg
   alt: two rice balls wrapped in nori 
   name: Sunny Blue 
   loc: Santa Monica, Los Angeles, CA 
   date: August 6, 2022 
   desc: Cute omusubi shop on Main Street. Had miso beef and wafu curry with barley tea
-- image_path: blue-venice-beach.jpg
+- path: blue-venice-beach.jpg
   alt: bright blue tides and white sand 
   name: Venice Beach 
   loc: Venice, Los Angeles, CA 
   date: August 6, 2022 
   desc: Walking along the boardwalk and dipping our feet in the ocean
-- image_path: griffith-observatory-la-view.jpg
+- path: griffith-observatory-la-view.jpg
   alt: observatory view of downtown LA 
   name: Griffith Observatory 
   loc: Los Angeles, CA 
   date: July 31, 2022 
   desc: View of LA from atop Mount Hollywood 
-- image_path: din-tai-fung-soup-and-greenbeans.jpg
+- path: din-tai-fung-soup-and-greenbeans.jpg
   alt: basket of xiaolongbao dumplings and strinb eans 
   name: Din Tai Fung
   loc: Century City, Los Angeles, CA 
   date: July 27, 2022
   desc: Apparently, reservations here are made weeks in advance! Above is their famous xiaolongbao with 18 folds
-- image_path: box-of-mochinuts.jpg
+- path: box-of-mochinuts.jpg
   alt: strawberry, chocolate, and cinnamon sugar mochi donuts 
   name: Mochinut 
   loc: Century City, Los Angeles, CA 
   date: July 27, 2022
   desc: Mochi + donuts = best dessert ever. Fun fact - we arrived near closing time, so we got two boxes for free! 
-- image_path: meet-fresh-grass-jelly.jpg
+- path: meet-fresh-grass-jelly.jpg
   alt: bowl of shiny grass jelly and taro 
   name: Meet Fresh 
   loc: Westwood, Los Angeles, CA 
   date: July 25, 2022 
   desc: First time trying grass jelly shaved ice. Topped with taro and boba 
-- image_path: kai-ramen-la.jpg
+- path: kai-ramen-la.jpg
   alt: tonkotsu ramen with egg and pork 
   name: Kai Ramen 
   loc: Santa Monica, CA 
   date: July 24, 2022 
   desc: Stopped by a seriously good ramen shop after a long day at the beach. Spicy tonkotsu ramen with minced pork
-- image_path: grand-central-market-moon-rabbit.jpg
+- path: grand-central-market-moon-rabbit.jpg
   alt: blue vendor stand 
   name: Moon Rabbit
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA
   date: July 23, 2022 
   desc: Asian tea and sandwiches 
-- image_path: grand-central-market-moon-rabbit-sando.jpg
+- path: grand-central-market-moon-rabbit-sando.jpg
   alt: takeout box of katsu chicken sandwich 
   name: Moon Rabbit
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA
   date: July 23, 2022  
   desc: I ordered the chicken katsu sandwich on Japanese milk bread! 
-- image_path: grand-central-market-shiku.jpg
+- path: grand-central-market-shiku.jpg
   alt: vendor with red neon sign 
   name: Shiku 
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA 
   date: July 10, 2022 
   desc: Mom-and-pop with homestyle Korean 
-- image_path: grand-central-market-shiku-chicken.jpg
+- path: grand-central-market-shiku-chicken.jpg
   alt: takeout box of maekjuk chicken 
   name: Shiku
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA 
   date: July 10, 2022 
   desc: I had the doenjang-marinated chicken with rice!  
-- image_path: manhattan-beach-la.jpg
+- path: manhattan-beach-la.jpg
   alt: pier at sunset over the ocean 
   name: Manhattan Beach 
   loc: El Segundo, Los Angeles, CA 
   date: July 9, 2022 
-- image_path: la-view-fourth-of-july.jpg
+- path: la-view-fourth-of-july.jpg
   alt: nighttime view of sprawling LA from above 
   name: Getty View Park 
   loc: Los Angeles, CA 
   date: July 4, 2022 
   desc: Star-gazing and watching fireworks illuminate LA 
-- image_path: oakobing-bingsu.jpg
+- path: oakobing-bingsu.jpg
   alt: bowls of green tea and mango bingsu 
   name: Oakobing 
   loc: K-town, Los Angeles, CA 
   date: July 2, 2022 
   desc: Bingsu dessert shop. Green tea shaved ice with mochis and matcha (left) and mango shaved ice with melon (right)
-- image_path: kobawoo-house-mai-and-miho.jpg
+- path: kobawoo-house-mai-and-miho.jpg
   alt: bossam, kimchi, and yikgaejang
   name: Kobawoo House 
   loc: K-town, Los Angeles, CA 
   date: July 2, 2022
   desc: Tried bossam and yukgaejang for the first time!
-- image_path: outside-the-getty.jpg
+- path: outside-the-getty.jpg
   alt: white glass art museum 
   name: The Getty 
   loc: Los Angeles, CA 
   date: July 2, 2022
   desc: Art museum on The Getty Campus
-- image_path: getty-robert.jpg
+- path: getty-robert.jpg
   alt: suspended glass skeleton with blue neon currents
   name: Robert
   loc: The Getty 
   loc2: Los Angeles, CA 
   date: July 2, 2022
   desc: My favorite display at the Getty! A levitating skeleton made of glass and pulsing neon light
-- image_path: getty-campo-vaccino.jpg
+- path: getty-campo-vaccino.jpg
   alt: campo vaccino painting in gold frame 
   name: Campo Vaccino
   loc: The Getty 
   loc2: Los Angeles, CA 
   date: July 2, 2022
   desc: Hazy landscape of modern Rome 
-- image_path: santa-monica-pier-ferris-wheel.jpg
+- path: santa-monica-pier-ferris-wheel.jpg
   alt: night at the beach with a ferris wheel 
   name: Santa Monica Pier 
   loc: Santa Monica, Los Angeles, CA 
   date: June 29, 2022
-- image_path: the-last-bookstore.jpg
+- path: the-last-bookstore.jpg
   alt: bookstore from the second floor balcony
   name: The Last Bookstore 
   loc: Downtown Los Angeles, CA 
   date: June 25, 2022
   desc: Turns out, this place has a LOT of books. Browse the stacks, check out the book tunnel, and buy local art! 
-- image_path: grand-central-market-lemon-icecream.jpg
+- path: grand-central-market-lemon-icecream.jpg
   alt: cup of ice cream 
   name: McConnell's Fine Ice Creams
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA 
   date: June 25, 2022
   desc: The best ice cream I've had in my life. Seriously. Dish of lemon and marionberries 
-- image_path: westwood-village-palm-trees.jpg
+- path: westwood-village-palm-trees.jpg
   alt: road intersection with palm trees and string lights 
   name: Westwood Village 
   loc: Westwood, Los Angeles, CA 
