--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -13,43 +13,43 @@ description: "Snapshots of a STEM student: my weekend trip to San Francisco in 2
 author: kjros 
 playlist: 7kBB5Uo5wBQTwHSs3Ar4Sv?si=0e42f02d194647fb
 images: 
-- image_path: painted-ladies.jpg
+- path: painted-ladies.jpg
   alt: row of seven colorfully painted victorian houses 
   name: The Painted Ladies 
   loc: San Francisco, CA 
   date: August 14, 2022 
   desc: One thing I didn't expect when I visited SF was how colorful their houses were - bright greens, pastel pinks, and baby blues 
-- image_path: ube-latte-boba-guys.jpg 
+- path: ube-latte-boba-guys.jpg 
   alt: purple and white ube boba latte 
   name: Boba Guys 
   loc: Japantown, San Francisco, CA 
   date: August 14, 2022
   desc: According to my favorite SF acquaintances, this place is VERY popular in the Bay Area. I can see why - this ube latte is in my top 5 boba drinks! 
-- image_path: pier-39-water.jpg 
+- path: pier-39-water.jpg 
   alt: blue ocean and small dock with mountains in the background 
   name: Pier 39
   loc: San Francisco, CA 
   date: August 14, 2022
   desc: I think I could have stayed here forever, feeling the breeze of the ocean on my face 
-- image_path: tessellation.jpg 
+- path: tessellation.jpg 
   alt: blue art sculptures on a mosaic path
   name: Trinity Place
   loc: Mid-Market, San Francisco, CA 
   date: August 14, 2022
   desc: Trippy looking sculptures and other such art 
-- image_path: union-square.jpg
+- path: union-square.jpg
   alt: empty street with string lights and paper latterns strung 
   name: Union Square
   loc: San Francisco, CA 
   date: August 14, 2022
   desc: Wandering the streets in SF with nothing but pluots and a good playlist 
-- image_path: golden-gate-park.jpg
+- path: golden-gate-park.jpg
   alt: lake and trees at a park 
   name: Golden Gate Park 
   loc: San Francisco, CA 
   date: August 13, 2022
   desc: Nice for reading on benches 
-- image_path: ppq-pho.jpg 
+- path: ppq-pho.jpg 
   alt: bowl of steak pho with bean sprouts 
   name: Pho Phu Quoc 
   loc: San Francisco, CA 
