--- a/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
+++ b/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
@@ -9,82 +9,82 @@ description: "Snapshots of a STEM student: August 2022 - November 2022"
 author: kjros 
 playlist: 6AnUNX6KB19M2a6nObusG5?si=9232eae2c1644bc3
 images: 
-- image_path: la-creperie-croque-madame.jpg 
+- path: la-creperie-croque-madame.jpg 
   alt: fries and ham and egg sandwich 
   name: La Crêperie 
   loc: Lincoln Park 
   date: November 19, 2022 
   desc: My favorite French restaurant in Chi. My classic order? A croque madame! 
-- image_path: hot-choco-machine-dining.jpg 
+- path: hot-choco-machine-dining.jpg 
   alt: skillet of pork and eggs 
   name: Machine Engineered Dining and Drink 
   loc: Wicker Park 
   date: November 5, 2022
   desc: Brunch after a race! Glazed pork with kimchi and fried eggs 
-- image_path: hot-choco-bear-art.jpeg 
+- path: hot-choco-bear-art.jpeg 
   alt: street art of yellow bear eating pizza
   name: Pizza Bear, I proclaim 
   loc: Wicker Park 
   date: November 5, 2022
-- image_path: chi-river-on-bridge-10-22.jpg 
+- path: chi-river-on-bridge-10-22.jpg 
   alt: blue and green chi river and skyscrapers 
   name: Chicago River 
   loc: River North, Chicago 
   date: October 22, 2022
-- image_path: miro-bird-lady-sculpture.jpg 
+- path: miro-bird-lady-sculpture.jpg 
   alt: concrete and steel sculpture of bird lady 
   name: Miró's Chicago 
   loc: Chicago Loop 
   date: October 21, 2022
-- image_path: chicago-picasso-sculpture.jpg 
+- path: chicago-picasso-sculpture.jpg 
   alt: steel picasso sculpture 
   name: Chicago Picasso 
   loc: Chicago Loop 
   date: October 21, 2022 
-- image_path: drunken-noodles-urban-space.jpg 
+- path: drunken-noodles-urban-space.jpg 
   alt: drunken noodles and thai iced tea 
   name: Keadkao 
   loc: Urban Space 
   loc2: Chicago Loop 
   date: October 21, 2022
   desc: Food in the Theater District! Drunken noodles and maybe the best thai iced tea I've ever had 
-- image_path: iit-autumn-22.jpg 
+- path: iit-autumn-22.jpg 
   alt: red and gold leaves 
   name: Illinois Tech 
   loc: Bronzeville, Chicago 
   date: October 14, 2022
   desc: Tea-sipping autumn days 
-- image_path: lakefront-trail-oct-22.jpg 
+- path: lakefront-trail-oct-22.jpg 
   alt: downtown chi from lakefront running trail 
   name: Lakefront Trail 
   loc: Museum Campus, Chicago 
   date: October 9, 2022 
   desc: Training for a race may be unpleasant, but the views along the lake aren't 
-- image_path: tsaocaa-shaved-ice.jpeg 
+- path: tsaocaa-shaved-ice.jpeg 
   alt: korean shaved ice with strawberries and peaches 
   name: Tsaocaa 
   loc: Chinatown, Chicago 
   date: September 28, 2022
   desc: Eating my weight in dessert. Snowflake ice with strawberries and white peaches 
-- image_path: indiana-sand-dunes.jpeg 
+- path: indiana-sand-dunes.jpeg 
   alt: Kaylee on a giant red lifeguard chair 
   name: Indiana Sand Dunes 
   loc: Porter, IN 
   date: September 18, 2022 
   desc: We had a picnic, fell down sand mountains, and did cartwheels in Lake Michigan
-- image_path: navy-pier-chi-downtown-gray.jpg 
+- path: navy-pier-chi-downtown-gray.jpg 
   alt: downtown chi at dusk over lake michigan 
   name: Navy Pier 
   loc: Near North Side, Chicago 
   date: September 10, 2022
   desc: Surprisingly, it's been 4 years since I last visited the most touristy place in Chi 
-- image_path: ping-tom-park-picnic.jpg 
+- path: ping-tom-park-picnic.jpg 
   alt: chi river at dusk at a park 
   name: Ping Tom Memorial Park 
   loc: Chinatown, Chicago 
   date: August 27, 2022 
   desc: Picnic in the park 
-- image_path: chi-north-view-of-madison-sent-to-amit.jpg 
+- path: chi-north-view-of-madison-sent-to-amit.jpg 
   alt: chi glass skyscrapers reflecting the river 
   name: North View from Madison Street
   loc: Chicago Loop 
