--- a/_posts/2022-12-15-snapshots-dec-2022-nyc.html
+++ b/_posts/2022-12-15-snapshots-dec-2022-nyc.html
@@ -13,163 +13,163 @@ description: "Snapshots of a STEM Student: My winter visit to NYC in December 20
 author: kjros 
 playlist: 3mnX3YhAR3eGbrmLnpFXZD?si=c4996efde428405d
 images: 
-- image_path: wicked.jpg 
+- path: wicked.jpg 
   alt: me holding up the Wicked playbill in front of the stage
   name: Wicked 
   loc: Gershwin Theatre 
   loc2: Theater District, Manhattan, NYC 
   date: December 19, 2022 
   desc: My first Broadway show! Long awaited, much loved, and the best thing I did in New York. 
-- image_path: wagamama-ramen.jpg 
+- path: wagamama-ramen.jpg 
   alt: pork ramen with egg 
   name: wagamama 
   loc: Midtown Manhattan, NYC 
   date: December 19, 2022 
   desc: Szechuan pork ramen, aka my savior from cold NY streets
-- image_path: times-square-night.jpg 
+- path: times-square-night.jpg 
   alt: times square at night 
   name: Times Square 
   loc: Midtown Manhattan, NYC
   date: December 18, 2022 
   desc: Never before have billboard lights felt so euphoric 
-- image_path: truffle-gnocchi-joannes.jpg 
+- path: truffle-gnocchi-joannes.jpg 
   alt: dish of gnocchi pasta 
   name: Joanne Trattoria 
   loc: Upper West Side, Manhattan, NYC 
   date: December 18, 2022
   desc: Apparently, never try going to dinner in NY without a reservation. After stumbling around for an hour, we found this cute hole-in-the-wall with live singing! Gnocchi with white truffle sauce 
-- image_path: escalators-fifth-ave.jpg 
+- path: escalators-fifth-ave.jpg 
   alt: mall escalators with shiny rainbow glass 
   name: Saks Fifth Avenue 
   loc: Midtown East, Manhattan, NYC 
   date: December 18, 2022 
   desc: Where handbags are $1200, but rainbow escalators are free 
-- image_path: times-square-day.jpg 
+- path: times-square-day.jpg 
   alt: times square with flashing billboards 
   name: Times Square
   loc: Midtown Manhattan, NYC
   date: December 18, 2022 
   desc: Sans the ball drop 
-- image_path: times-square-world-cup.jpg 
+- path: times-square-world-cup.jpg 
   alt: rally in times square 
   name: Times Square, World Cup Edition 
   loc: Midtown Manhattan, NYC
   date: December 18, 2022 
   desc: Argentina won, and people celebrated in the streets
-- image_path: empire-state-night-view2.jpg 
+- path: empire-state-night-view2.jpg 
   alt: nyc skyline at night 
   name: Empire State Building 
   loc: Midtown Manhattan, NYC 
   date: December 17, 2022 
   desc: Where I defied gravity 
-- image_path: empire-state-night-view.jpg 
+- path: empire-state-night-view.jpg 
   alt: nyc skyline at night 
   name: Empire State Building 
   loc: Midtown Manhattan, NYC 
   date: December 17, 2022 
   desc: (In New York, those blinding lights and concrete jungles)
-- image_path: local92-nyc.jpg 
+- path: local92-nyc.jpg 
   alt: cast iron skillet of shakshuka and bread 
   name: Local 92 NY 
   loc: East Village, Manhattan, NYC 
   date: December 17, 2022 
   desc: Cute Middle Eastern with cool lighting! Always the egg fanatic, I had shakshuka
-- image_path: little-italy.jpg 
+- path: little-italy.jpg 
   alt: string lights and outside restaurants in the street 
   name: Little Italy 
   loc: Lower Manhattan, NYC 
   date: December 17, 2022 
-- image_path: greenwich-outside-the-strand.jpg 
+- path: greenwich-outside-the-strand.jpg 
   alt: black asymetric skyscraper 
   name: Greenwich Village
   loc: Manhattan, NYC 
   date: December 17, 2022
-- image_path: colorful-books-the-strand.jpg 
+- path: colorful-books-the-strand.jpg 
   alt: wall of colorful books 
   name: The Strand Bookstore 
   loc: Greenwich Village, Manhattan, NYC 
   date: December 17, 2022 
   desc: Where I bought a copy of Gödel, Escher, Bach! And had to stop myself from buying a billion stickers
-- image_path: washington-square-park.jpg
+- path: washington-square-park.jpg
   alt: me in front of the washington park arch 
   name: Washington Square Park 
   loc: Greenwich Village, Manhattan, NYC 
   date: December 17, 2022 
   desc: Where I saw a million trained pigeons and impressive hula-hoop routines... separately, of course 
-- image_path: brooklyn-bagels.jpg 
+- path: brooklyn-bagels.jpg 
   alt: bagel with blueberry cream cheese 
   name: Brooklyn Bagel and Coffee Co
   loc: Greenwich Village, Manhattan, NYC 
   date: December 17, 2022 
   desc: Because you can't visit NYC without finding a bagel joint. Pictured - everything bagel with blueberry cream cheese. Not pictured - avocado and gouda bagel sandwich
-- image_path: the-met-glass-overview.jpg 
+- path: the-met-glass-overview.jpg 
   alt: indoor balcony with sculptures and a cafe 
   name: The Met 
   loc: Upper East Side, Manhattan, NYC 
   date: December 16, 2022 
   desc: Giving ultimate art vibes
-- image_path: triumph-of-aemilius-met.jpg 
+- path: triumph-of-aemilius-met.jpg 
   alt: triumph of aemilius paulus in a golden frame 
   name: The Triumph of Aemilius Paulus 
   loc: The Met 
   loc2: Upper East Side, Mahhattan, NYC 
   date: December 16, 2022 
-- image_path: egyptian-temple-the-met.jpg 
+- path: egyptian-temple-the-met.jpg 
   alt: stone egymptian temple ruins in the met 
   name: The Temple of Dendur 
   loc: The Met 
   loc2: Upper East Side, Mahhattan, NYC 
   date: December 16, 2022 
-- image_path: greek-sculpture-atrium-met.jpg 
+- path: greek-sculpture-atrium-met.jpg 
   alt: atrium of greek and roman sculptures
   name: Greek and Roman Galleries 
   loc: The Met 
   loc2: Upper East Side, Mahhattan, NYC 
   date: December 16, 2022 
-- image_path: coin-fountain-greek-exhibit-met.jpeg
+- path: coin-fountain-greek-exhibit-met.jpeg
   alt: coin fountain in a statue exhibit 
   name: Greek and Roman Galleries 
   loc: The Met 
   loc2: Upper East Side, Mahhattan, NYC 
   date: December 16, 2022 
   desc: Throw a coin and make a wish, but only if it's denarii 
-- image_path: origami-tree-nat-history.jpg 
+- path: origami-tree-nat-history.jpg 
   alt: christmas tree with origami as ornaments 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022 
   desc: For a joyous Christmas tree, handmake cute origami animals! 
-- image_path: glass-space-nat-history.jpeg
+- path: glass-space-nat-history.jpeg
   alt: floating planets in glass room 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022 
   desc: Planets not to scale 
-- image_path: wall-of-skeletons-nat-history.jpg
+- path: wall-of-skeletons-nat-history.jpg
   alt: wall of animal skeletons 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022 
   desc: Totally not spooky
-- image_path: dino-skelly-nat-history.jpg
+- path: dino-skelly-nat-history.jpg
   alt: t-rex skeleton 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022
   desc: Jurassic Park, eat your heart out 
-- image_path: katz-holding-up-pastrami.jpeg
+- path: katz-holding-up-pastrami.jpeg
   alt: kaylee holding up a pastrami sandwich 
   name: Katz' Delicatessen
   loc: Lower East Side, Manhattan, NYC 
   date: December 15, 2022
   desc: I'll have what she's having - melt-in-your-mouth pastrami sandwiches the size of your head! 
-- image_path: rainy-times-square.jpg 
+- path: rainy-times-square.jpg 
   alt: times square on dreary rainy day 
   name: Times Square 
   loc: Midtown Manhattan, NYC 
   date: December 15, 2022
   desc: Greeted by a sea of umbrellas and flashing billboards 
-- image_path: ord-rainbow-lights.jpg
+- path: ord-rainbow-lights.jpg
   alt: airport hall with neon lights on the ceiling
   name: O'Hare Airport
   loc: Chicago, IL
