--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -9,90 +9,90 @@ description: "Snapshots of a STEM student: May 2020 - Sept 2021"
 author: kjros
 playlist: 62NBeQ24Yg32LOZQdyejBy?si=bcae210ed8d0410d
 images:
-- image_path: wndr-infinity-room.jpg
+- path: wndr-infinity-room.jpg
   alt: infinity mirror room with mirror ornaments
   name: Let's Survive Forever
   loc: WNDR Museum
   loc2: West Loop, Chicago
   date: April 18, 2021
   desc: An Infinity Mirror Room, by Japanese artist Yayoi Kusama. We were alloted exactly one minute in the exhibit. Pretty trippy!
-- image_path: blue-leaves-west-loop.jpg
+- path: blue-leaves-west-loop.jpg
   alt: blue plant on the sidewalk
   name: Sidewalk Blues
   loc: West Loop, Chicago
   date: April 18, 2021
-- image_path: ramen-san-lunch-special.jpg
+- path: ramen-san-lunch-special.jpg
   alt: tray of tonkotsu ramen, salad, and karaage chicken
   name: RAMEN-SAN
   loc: River North, Chicago
   date: April 18, 2021
   desc: My favorite ramen restaurant! Lunch special with salad, karaage chicken and tonkotsu ramen
-- image_path: breakfast-haleys-bday.jpg
+- path: breakfast-haleys-bday.jpg
   alt: eggs benedict with canadian bacon and hashbrowns
   name: Hutch American Bistro
   loc: Lakeview, Chicago
   date: March 28, 2021
   desc: Stumbled upon a cute bistro along N. Clark. Eggs benedict with hashbrowns
-- image_path: cuddle-bunny-gray-ghost.jpg
+- path: cuddle-bunny-gray-ghost.jpg
   alt: large gray bunny
   name: Cuddle Bunny
   loc: Lincoln Park, Chicago
   date: March 27, 2021
   desc: The best stress relief = cuddling bunnies for an hour!
-- image_path: gelato-on-river.jpg
+- path: gelato-on-river.jpg
   alt: chocolate and strawberry gelato on a bridge over the chi river
   name: Gelato on the River
   loc: River North, Chicago
   date: March 20, 2021
-- image_path: st-patricks-river.jpg
+- path: st-patricks-river.jpg
   alt: chicago river dyed bright green for st patricks
   name: St. Patrick's Day River
   loc: River North, Chicago
   date: March 13, 2021
   desc: Every year, Chicago dyes its river green for St. Patrick's Day. Don't worry, tour guides claim it's safe
-- image_path: maggie-daley-skating.jpg
+- path: maggie-daley-skating.jpg
   alt: ice skating rink surrounded by skyscrapers
   name: Maggie Daley Park
   loc: Chicago Loop
   date: February 9, 2021
   desc: Ice skating in the heart of downtown Chi
-- image_path: shedd-aq-clownfish.jpg
+- path: shedd-aq-clownfish.jpg
   alt: two clownfish in the anenomes
   name: The Shedd Aquarium
   loc: Museum Campus, Chicago
   date: February 7, 2021
   desc: Have you seen my son?!
-- image_path: grand-lux-picatta.jpg
+- path: grand-lux-picatta.jpg
   alt: lemon chicken picatta with capers and mushrooms
   name: Grand Lux Cafe
   loc: Michigan Avenue, Chicago
   date: February 2, 2021
   desc: Afternoon meal on the Mag Mile. Lemon chicken piccata with fresh parmesan
-- image_path: macs-chipotle-wi-dells.jpg
+- path: macs-chipotle-wi-dells.jpg
   alt: skillet of mac with lime
   name: MACS
   loc: Wisconsin Dells, WI
   date: January 2, 2021
   desc: The best (and only) mac restaurant I've visited. Chipotle mac with chicken and lime
-- image_path: mexico-playa-sunrise-sienna.jpg
+- path: mexico-playa-sunrise-sienna.jpg
   alt: sunrise with pink skies on the seaside
   name: Playa del Carmen 
   loc: Quintana Roo, Mexico
   date: December 19, 2020
   desc: Daybreak on the ocean
-- image_path: mexico-rock-hopping.jpg
+- path: mexico-rock-hopping.jpg
   alt: me on a rock along the blue ocean
   name: Playa del Carmen 
   loc: Quintana Roo, Mexico
   date: December 19, 2020
   desc: Rock-hopping on the Caribbean Shore
-- image_path: lakefront-trail-from-shedd.jpg
+- path: lakefront-trail-from-shedd.jpg
   alt: trail by blue lake michigan
   name: Lakefront Trail 
   loc: Museum Campus, Chicago 
   date: November 8, 2020
   desc: View of downtown Chi and Lake Michigan from the Shedd Aquarium
-- image_path: madison-rainy-day-insta.jpg
+- path: madison-rainy-day-insta.jpg
   alt: streetview of a skyscraper
   name: West Madison Street
   loc: Chicago Loop 
