--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -13,49 +13,49 @@ description: "Snapshots of a STEM student: My trip to Toronto in March 2022"
 author: kjros
 playlist: 0EH5qjYoLsg5WWBQu1XfAk?si=d98cd97c72054b83
 images: 
-- image_path: pasaj-brunch-toronto.jpeg
+- path: pasaj-brunch-toronto.jpeg
   alt: pancakes, matcha, and eggs benedict 
   name: PASAJ 
   loc: Toronto, Canada 
   date: March 14, 2022
   desc: Istanbul-style brunch. Pancakes with sour cherry jam and tahini helva, zucchini fritters with pastirma and hollandaise, and matcha 
-- image_path: broadview-hotel-room.jpeg
+- path: broadview-hotel-room.jpeg
   alt: hotel room with burgandy curtains and pink floral wallpaper 
   name: Broadview Hotel 
   loc: Toronto, Canada 
   date: March 14, 2022
   desc: This hotel had a cool record collection, which we danced to all night
-- image_path: cn-tower-view-1.jpg
+- path: cn-tower-view-1.jpg
   alt: city lights at night from the top of the cn tower
   name: CN Tower 
   loc: Downtown Toronto, Canada 
   date: March 13, 2022
   desc: Dazzling view of the city from a dizzying height of 553m
-- image_path: cn-tower-view-2.jpg
+- path: cn-tower-view-2.jpg
   alt: city lights at night from the top of the cn tower
   name: CN Tower 
   loc: Downtown Toronto, Canada 
   date: March 13, 2022
   desc: For Americans like me, that's 1,815ft
-- image_path: yonge-dondas-square-toronto.jpeg
+- path: yonge-dondas-square-toronto.jpeg
   alt: billboard screens and red streetcars at an intersection 
   name: Yonge-Dondas Square 
   loc: Downtown Toronto, Canada 
   date: March 13, 2022 
   desc: Center square of the Yonge entertainment district 
-- image_path: broadview-hotel-noodle-dish.jpg
+- path: broadview-hotel-noodle-dish.jpg
   alt: soba noodles with edamame  
   name: Broadview Hotel Rooftop Bar 
   loc: Toronto, Canada 
   date: March 12, 2022 
   desc: Rooftop restaurant overlooking downtown Toronto. Soba noodles and a mojito! 
-- image_path: outside-casa-loma.jpg
+- path: outside-casa-loma.jpg
   alt: gothic castle like mansion with canadian flag 
   name: Casa Loma 
   loc: Toronto, Canada 
   date: March 12, 2022 
   desc: Mansion-turned-historic-museum. We explored 7 floors! 
-- image_path: chandelier-inside-casa-loma.jpeg
+- path: chandelier-inside-casa-loma.jpeg
   alt: traditional dining room with a chandelier 
   name: Casa Loma 
   loc: Toronto, Canada 
