sep20 moving images to folder

--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true
 potpourri: true
 category: potpourri
+rel_path: sep20-may21
 description: "Snapshots of a STEM student: May 2020 - Sept 2021"
 author: kjros
 playlist: 62NBeQ24Yg32LOZQdyejBy?si=bcae210ed8d0410d
