june21 moving images to folder

--- a/assets/images/gallery/june21-mar22/2021-06-01-snapshots-june-2021-mar-2022.html
+++ b/assets/images/gallery/june21-mar22/2021-06-01-snapshots-june-2021-mar-2022.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true
 potpourri: true
 category: potpourri
+rel_path: june21-mar22
 description: "Snapshots of a STEM student: June 2021 - March 2022"
 author: kjros
 playlist: 13SdxBkhYyHhfbg0wWTh00?si=67d92efaf5054d3e
