aug22 moving images to folder

--- a/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
+++ b/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true 
 potpourri: true 
 category: potpourri 
+rel_path: aug22-nov22
 description: "Snapshots of a STEM student: August 2022 - November 2022"
 author: kjros 
 playlist: 6AnUNX6KB19M2a6nObusG5?si=9232eae2c1644bc3
