--- a/_drafts/2023-03-23-transit.html
+++ b/_drafts/2023-03-23-transit.html
@@ -27,8 +27,8 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <p>
-    When I finally gathered the courage to scan my pass, I was denied. I tried to load fares onto the card, which also didn't work. 
-    Embarassed, I slinked back to my dorm, convinced I had done something wrong. 
+    When I finally gathered the courage to scan my pass, I was denied. I tried to load fares at an extraordinary loud 
+    CTA machine, which also didn't work. Embarassed, I slunk back to my dorm, convinced I had done something wrong. 
 </p>
 
 <p>
@@ -39,7 +39,8 @@ description: "My personal ranking of major city public transit lines"
     Since then, I've visited many different cities. Many transit systems nowadays encourage buying passes on your phone, but I 
     much prefer collecting the physical cards. There's something uniquely exhilarating about recieving that card: in your hand, you 
     have the opportunity to go anywhere. Catch the T, ride the subway, chase after an SF trolley: it's a new adventure. 
-    And I still fall in love with that independence - it's like I belong there. Or that I'm capable of something, so different than normal life. 
+    Whenever I travel somewhere new, I fall in love with that independence, over and over again. 
+    <!-- And I still fall in love with that independence - it's like I belong there. Or that I'm capable of something, so different than normal life.  -->
 </p>
 
 <hr>
@@ -120,7 +121,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/transit-ranking/mtcc.jpg" alt="IIT McCormic Tribune Campus Center in the fall">
+    <img src="../assets/images/blog/blog-post/transit-ranking/mtcc.jpg" alt="IIT McCormick Tribune Campus Center in the fall">
 </div>
 
 <p>
@@ -136,7 +137,7 @@ description: "My personal ranking of major city public transit lines"
     <br>
     For the most part, follow the tracks: since they're above ground, you'll find a stop eventually. 
     Unfortunately, there's always two sets of stairs, only one of which you're allowed to go <i>up</i>. Additionally, 
-    very rarely will you see escalators at a station, let alone working escalators. The elevators aren't fantastic, either. 
+    very rarely will you see escalators at a station, let alone working escalators - I'm convinced the elevators are a thing of fantasy. 
     Score: 4/10.
 </p>
 
@@ -149,7 +150,7 @@ description: "My personal ranking of major city public transit lines"
     15 minutes by train. On the other hand, consistency is hard to come by. Buses are quite unreliable, often 
     passing by the stop or not showing up. 
     There's been a handful of times when a line is out of service, so passengers must exit the train and take a shuttle bus 
-    to the next few stops, easily adding 20 minutes to your commute. Chicago, do better. 
+    to the next few stops, easily adding 25 minutes to your commute. Chicago, do better. 
     Score: 3/10.
 </p>
 
@@ -182,6 +183,10 @@ description: "My personal ranking of major city public transit lines"
 
 <div class="text-center">
     <img src="../assets/images/blog/blog-post/transit-ranking/ventra.png" alt="blue ventra card">
+    <br>
+    <figure>
+        <figcaption>Ventra card</figcaption>
+    </figure>
 </div>
 
 <p>
@@ -203,7 +208,7 @@ description: "My personal ranking of major city public transit lines"
 <h3>2. Toronto</h3>
 
 <div class="text-center"> 
-    <img src="../assets/images/blog/blog-post/transit-ranking/toronto-map.jpg" alt="map of Toronto train lines" style="max-width: 85%;">
+    <img src="../assets/images/blog/blog-post/transit-ranking/toronto-map.jpg" alt="map of Toronto train lines">
     <br>
     <figure>
         <figcaption>The Toronto Transit Commission (TTC) subway lines</figcaption>
@@ -222,3 +227,97 @@ description: "My personal ranking of major city public transit lines"
 <p>
     Having recently watched Turning Red, I was delighted to step out of the wintery snow and onto the bright red bus. 
 </p>
+
+<p>
+    <b>
+        Ease of Access
+    </b>
+    <br>
+    Like I said, most take the streetcars. I suppose there's nothing too difficult about finding a bus stop, even in the cold winter. 
+    For its rail-lines, each station is fairly easy to spot, with escalators and wide turnstiles. Not bad! 
+    Score: 6/10. 
+</p>
+
+<p>
+    <b>
+        Speed and Consistency
+    </b>
+    <br>
+    Sometimes when I travel, I'm stuck between waiting for a late bus, or booking it down the streets (to the amusement of native city-goers). 
+    However, I think every train or bus came on time, and with a smoothness I did not expect (coming from janky CTA trains that throw you left and right). 
+    Unfortunately, I don't carry a speedometer, but I think the speed was satsifactory. 
+    Score: 7/10.
+</p>
+
+<p>
+    <b>
+        UX
+    </b>
+    <br>
+    Upon hopping aboard our first streetcar, my friend and I giggled at the quirkiness of the bus, with its ecletic placement of seats and 
+    vastness. Likewise, on the train, we were in awe of the open space, nearly two or three times as wide as a standard CTA car. 
+    Both types of transit rides were smooth and scarily calm and quiet. Maybe Torontonians are built different. 
+    Score: 8/10. 
+</p>
+
+<p>
+    <b>
+        Aesthetic 
+    </b>
+    <br>
+    I can't quite remember exactly what the stations looked like, besides residing underground. I think I was too excited by the prospect of 
+    taking a train that didn't set you on edge. Let's give it a solid: 
+    Score: 6/10. 
+</p>
+
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/presto.png" alt="black Presto card" style="max-width: 60%;">
+    <br>
+    <figure>
+        <figcaption>
+            PRESTO card
+        </figcaption>
+    </figure>
+</div>
+
+<p>
+    <b>
+        Card 
+    </b>
+    <br>
+    Seriously, what's not to love? Clean, simple, and bold, with a matte finish. 
+    Score: 10/10. 
+</p>
+
+<p>
+    Calculated score: <b>7.3/10</b>. 
+</p>
+
+<hr>
+
+<h3>3. Los Angeles</h3>
+
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/la-transit.png" alt="LA metro lines" style="max-width:90%">
+    <br>
+    <figure>
+        <figcaption>LA Metro Rail</figcaption>
+    </figure>
+</div>
+
+<p>
+    My <a href="{% link _posts/2022-12-29-adventures-in-LA.html %}">first experience with LA transit</a> involved taking an LAX shuttle to 
+    catch a garishly-orange bus to UCLA. My second one, a Saturday trip to "downtown" LA, took nearly two hours, to my horror. 
+</p>
+
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/la-bus.jpg" alt="orange LA bus" style="max-width:75%">
+</div>
+
+<p>
+    Somehow, the journey was shorter using buses rather than trains. 
+    Still, those trips rquired at least one transfer, so much that I opted to split an Uber on several occassions. 
+    I now realize LA isn't exactly commuter-friendly, so if you 
+    don't like me bashing SoCal transit, I'd recommend skipping ahead to San Francisco. 
+</p>
+
