--- a/_drafts/2020-09-09-snapshots-march-2023-dc.html
+++ b/_drafts/2020-09-09-snapshots-march-2023-dc.html
@@ -13,8 +13,77 @@ description: "Snapshots of a STEM student: My spring break at DC"
 author: kjros 
 playlist: 0D8haZxhv576p9LaXcVkbv?si=1eb9182ba3464860
 images: 
+- path: library-congress-ceiling.jpg 
+  alt: wide painted ceilings in library of congress 
+  name: Library of Congress 
+  loc: Capitol Hill
+  date: March 18, 2023 
+  desc: Craning my neck to gaze at the sunlight 
+- path: library-congress-painted-ceilings.jpg 
+  alt: wide painted ceilings in library of congress 
+  name: Library of Congress 
+  loc: Capitol Hill
+  date: March 18, 2023 
+- path: library-congress-research.jpg 
+  alt: large atrium for research in library 
+  name: Library of Congress 
+  loc: Capitol Hill
+  date: March 18, 2023 
+- path: unconventional-diner.jpg 
+  alt: french dip pasta 
+  name: Unconventional Diner 
+  loc: Mt. Vernon Square, DC 
+  date: March 17, 2023 
+  desc: Dare I say, the most amazing meal I've ever had? This restaurant serves dishes combining typical homestyle with an elegant twist. We had chicken parm "florentine" with gruyère, "french dip" pappardelle with flank and horseradish, and truffle mac! Best leftovers ever. 
+- path: air-and-space-planet-model.jpg 
+  alt: solar system glass model 
+  name: National Air and Space Museum 
+  loc: National Mall, DC 
+  date: March 17, 2023 
+  desc: How does Earth organize birthday parties? They PLANET! (sorry, that joke, much like Orion's belt, was lame. 3 stars)
+- path: air-and-space-astronaut.jpg 
+  alt: neil armstrong suit 
+  name: National Air and Space Museum 
+  loc: National Mall, DC 
+  date: March 17, 2023 
+- path: natural-history-cool-rocks.jpg 
+  alt: large blocky flourite 
+  name: National Museum of Natural History 
+  loc: National Mall, DC 
+  date: March 17, 2023 
+  desc: pwetty rocks 
+- path: natural-history-fluorite.jpg 
+  alt: large blocky flourite 
+  name: National Museum of Natural History 
+  loc: National Mall, DC 
+  date: March 17, 2023 
+  desc: Resisting the urge to eat  
+- path: natural-history-quartz.jpg 
+  alt: spiky clear and white quartz rock 
+  name: National Museum of Natural History 
+  loc: National Mall, DC 
+  date: March 17, 2023 
+  desc: So this is what Minecraft was talking about 
+- path: natural-history-fish-tank.jpg 
+  alt: blue fish tank 
+  name: National Museum of Natural History 
+  loc: National Mall, DC 
+  date: March 17, 2023 
+  desc: Wherever I go, I am constantly entranced by the fishies 
+- path: nat-museum-of-art-niagra.jpg 
+  alt: painting of niagra falls in a golden frame 
+  name: Niagra 
+  loc: The National Gallery of Art 
+  loc2: National Mall, DC 
+  date: March 17, 2023 
+- path: nat-museum-of-art-statue.jpg 
+  alt: marble statue between two stained glass windows 
+  name: The National Gallery of Art 
+  loc: National Mall, DC 
+  date: March 17, 2023 
 - path: lincoln-memorial.jpg 
   alt: Lincoln memorial from outside 
+  name: The Lincoln Memorial 
   loc: National Mall, DC 
   date: March 16, 2023 
   desc: A tad more impressive than a penny 
@@ -24,6 +93,12 @@ images:
   loc: National Mall, DC 
   date: March 16, 2023 
   desc: They do say Lincoln was the tallest president... 
+- path: cherry-blossom-wharf.jpg 
+  alt: me sitting on a dock with fake cherry blossom lights 
+  name: Wharf Street 
+  loc: The Wharf, DC 
+  date: March 16, 2023 
+  desc: daydreaming 
 - path: kaliwa.jpg 
   alt: curry topped with peanuts 
   name: Kaliwa 
