--- a/poetry.html
+++ b/poetry.html
@@ -1,6 +1,6 @@
 ---
 layout: page 
-title: poetry 
+title: Poetry 
 ---
 
 <section class="list">
@@ -13,4 +13,4 @@ title: poetry
             </div>
         {% endif %}
     {% endfor %}
-</section>
+</section> 
