setting back to pre avoid wrap

--- a/_posts/2023-05-13-partner-in-code.html
+++ b/_posts/2023-05-13-partner-in-code.html
@@ -6,7 +6,7 @@ category: poetry
 description: "when I can't sleep, I write" 
 author: kjros 
 --- 
-<p style="white-space:pre-wrap;">
+<p style="white-space:pre;">
 a year has passed, my darling - 
 but that's not right, is it? 
 for you were never quite mine, 
