--- a/_posts/2023-05-22-that-trader-joes-magic.html
+++ b/_posts/2023-05-22-that-trader-joes-magic.html
@@ -7,7 +7,7 @@ description: 'TJ AH KJR'
 author: kjros 
 --- 
 
-<p style="white-space:pre-wrap;">
+<p style="white-space:pre;">
 The Trader Joe's font 
 is something else entirely. 
         Low-fat guac, 
@@ -31,7 +31,7 @@ until we're lying on the floor, laughing,
 pouring out frothy bubbles that spin my head. 
 </p>
 
-<p style="white-space:pre-wrap;">
+<p style="white-space:pre;">
 Our first journey yields 
 a box of Driscoll raspberries 
 (though I prefer blueberries), 
@@ -44,7 +44,7 @@ the seeds rubbing against my teeth,
 and I think this is heaven. 
 </p>
 
-<p style="white-space:pre-wrap;">
+<p style="white-space:pre;">
 Impromptu TJ trips become a summer staple. 
 Each time, 
 you disappear along the shelves, 
@@ -60,7 +60,7 @@ it's because you were looking, too
 rather than a consequence of these overhead lights. 
 </p>
 
-<p style="white-space:pre-wrap;">
+<p style="white-space:pre;">
 The last journey surprises me. 
 It starts as a confession over persian ice cream 
 (which we take turns holding, lest our fingers 
@@ -77,7 +77,7 @@ except to gift me something new.
 As if you weren't enough. 
 </p>
 
-<p style="white-space:pre-wrap;">
+<p style="white-space:pre;">
 The Westwood store on Weyburn 
 no longer welcomes our shining faces. 
 I frequent the one on Wabash and Roosevelt, 
